mrs-yaml/mrs-hugo-www-Dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mrs-www-dev
  name: mrs-www-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mrs-www-dev
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mrs-www-dev
    spec:
      containers:
      - image: docker.io/mikeroysoft/mrs-hugo:dev
        name: mrs-www-dev
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mrs-www-dev
  name: mrs-www-dev
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: mrs-www-dev
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mrs-www-dev
  labels:
    app: mrs-www-dev
spec:
  rules:
  - host: "dev.mikeroysoft.com"
    http:
      paths:
      - path: /
      pathType: Prefix
      backend:
        service:
          name: mrs-www-dev
          port:
            number: 80
