mrs-yaml/mrs-hugo-www.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mrs-www
  name: mrs-www
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mrs-www
  template:
    metadata:
      labels:
        app: mrs-www
    spec:
      containers:
      - image: mikeroysoft/mrs-hugo:arm-v6
        name: mrs-www
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mrs-www
  name: mrs-www
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: mrs-www
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mrs-www
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: mrs-www
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mrs-www
            port:
              number: 80
